convert to typescript

--- a/examples/index.html
+++ b/examples/index.html
@@ -1,15 +1,16 @@
 <html>
-<head>
-    <script src="../dist/frappe-gantt.js"></script>
-    <link rel="stylesheet" href="../dist/frappe-gantt.css">
-    <link rel="stylesheet" href="css.css">
-</head>
-<body>
+  <head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/classlist/1.2.20171210/classList.min.js"></script>
+    <script src="../dist/timeline.js"></script>
+    <link rel="stylesheet" href="../dist/timeline.css" />
+    <link rel="stylesheet" href="css.css" />
+  </head>
 
-<div id='gantt'></div>
-<div class="gantt-container mt-5">
-              <svg id="gantt-1"></svg>
-            </div>
-<script src="index.js"></script>
-</body>
+  <body>
+    <div id="gantt"></div>
+    <div class="gantt-container mt-5" pointer-events="auto">
+      <svg id="gantt-1"></svg>
+    </div>
+    <script src="index.js"></script>
+  </body>
 </html>
