Fix typescript errors

--- a/examples/index.html
+++ b/examples/index.html
@@ -7,10 +7,7 @@
   </head>
 
   <body>
-    <div id="gantt"></div>
-    <div class="gantt-container mt-5" pointer-events="auto">
-      <svg id="gantt-1"></svg>
-    </div>
+    <div class="gantt-container mt-5" id="abc123" pointer-events="auto"></div>
     <script src="index.js"></script>
   </body>
 </html>
