--- a/examples/index.html
+++ b/examples/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css.css" />
   </head>
 
-  <body>
+  <body style="overflow: hidden;">
     <div class="gantt-container mt-5" id="abc123" pointer-events="auto"></div>
     <script src="index.js"></script>
   </body>
