separate rendering into multiple SVG images

--- a/examples/index.html
+++ b/examples/index.html
@@ -6,7 +6,12 @@
   </head>
 
   <body style="overflow: hidden;">
-    <div class="gantt-container mt-5" id="abc123" pointer-events="auto"></div>
+    <div
+      class="gantt-container mt-5"
+      id="abc123"
+      pointer-events="auto"
+      style="height: 300px;"
+    ></div>
     <script src="index.js"></script>
   </body>
 </html>
