setup view inside view class

--- a/examples/index.html
+++ b/examples/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body style="overflow: hidden;">
-    <div class="gantt-container mt-5" id="abc123" pointer-events="auto"></div>
+    <div class="mt-5" id="abc123"></div>
     <script src="index.js"></script>
   </body>
 </html>
